# modeldoctor

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  QUICKSTART.md  README.md  allaboutproject.md  biome.json  changelog.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  request.json  request.txt  server.js  start.sh  tsconfig.base.json  vitest.backend.config.ts
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: benchmark-runner.yml  ci.yml
ai-docs/: demo-walkthrough.md  installation-guide.md  project-completion-summary.md  security-improvements.md  task-001-web-interface.md
apps/benchmark-runner/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
apps/benchmark-runner/images/: aiperf.Dockerfile  aiperf.base.Dockerfile  evalscope.Dockerfile  evalscope.base.Dockerfile  genai-perf.Dockerfile  guidellm.Dockerfile  kv-cache-stress.Dockerfile  prefix-cache-probe.Dockerfile  tau2.Dockerfile  tau3.Dockerfile  tau3.base.Dockerfile  vegeta.Dockerfile  vegeta.base.Dockerfile  vllm-omni-bench.Dockerfile  vllm-omni-bench.base.Dockerfile
apps/benchmark-runner/runner/: __init__.py  __main__.py  argv.py  callback.py  env.py  local_writer.py  main.py  metrics.py  s3_writer.py  storage_keys.py
apps/benchmark-runner/runner/tools/: omni_driver.py
apps/benchmark-runner/scripts/: kv_cache_stress.py  prefix_cache_probe.py  verify-airgap.sh
apps/benchmark-runner/tau2/: md_tau2_summarize.py  summarize_lib.py
apps/benchmark-runner/tau2_summarize/: md_tau2_summarize.py  summarize_lib.py
apps/benchmark-runner/tau3_summarize/: md_tau3_summarize.py  summarize_lib.py
apps/benchmark-runner/tests/: conftest.py  test_argv.py  test_callback.py  test_checkpoint.py  test_env.py  test_local_writer.py  test_main.py  test_metrics.py  test_named_secret.py  test_omni_driver.py  test_s3_writer.py  test_storage_keys.py  test_tau2_summarize.py  test_tau3_summarize.py
apps/benchmark-runner/tests/fixtures/: guidellm_report.json  omni_bench_stdout.txt
docs/: project-standards.md  saved-compare-report-style.md
e2e/: README.md  auth.spec.ts  benchmarks.spec.ts  connections.spec.ts  playwright.config.ts  saved-compares.spec.ts  templates.spec.ts  theme-palette.spec.ts
public/: app.js  index.html  style.css
tools/: build-base-images.sh  build-runner-images.sh  send-mock-alert.sh
web/: index.html  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
(+1587 files in other folders)
