[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modeldoctor-benchmark-runner"
version = "0.1.0"
description = "Thin wrapper around guidellm for ModelDoctor's benchmark feature"
requires-python = ">=3.11"
dependencies = [
  # Pin guidellm to a specific minor — bumping is a deliberate PR with new
  # fixture-based metrics-mapper tests. Update with care.
  "guidellm==0.4.0",
  # `requests` is already a transitive dep of guidellm, but we depend on it
  # explicitly for the callback HTTP client so a future guidellm bump that
  # drops it doesn't break us.
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-mock>=3.12,<4",
  "ruff>=0.5,<1",
]

[project.scripts]
# `python -m runner` is the canonical entrypoint; this script is a convenience
# for ad-hoc use during development.
modeldoctor-benchmark-runner = "runner.main:main"

[tool.setuptools.packages.find]
include = ["runner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4"]
